objects/CMN_AppLogEvent__e.object
<CustomObject>
    <description>This event is used by a an Apex Logger to log various debug messages or errors in an asynchronous manner</description>
    <fields>
        <fullName>CMN_ClassMethod__c</fullName>
        <description>Class and method text</description>
        <label>Class Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ExceptionType__c</fullName>
        <description>Exception Class Type</description>
        <label>Exception Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ExecutionEvent__c</fullName>
        <description>A reflection of the Quiddity enumeration, which indicates which event resulted in the code being run; see: Request.getCurrent().getQuiddity().</description>
        <label>Execution Event</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_Limits__c</fullName>
        <label>Limits</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMN_LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMN_LogLevel__c</fullName>
        <description>Must adhere to Standard Log Levels e.g. DEBUG, ERROR, INFO etc.</description>
        <label>LogLevel</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMN_RecordId__c</fullName>
        <description>Ids for primary sobject related to log event</description>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ShortMessage__c</fullName>
        <label>Short Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_StackTrace__c</fullName>
        <label>StackTrace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMN_UserId__c</fullName>
        <label>UserId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>App Log Event</label>
    <pluralLabel>App Log Events</pluralLabel>
</CustomObject>